# Kalman-and-Bayesian-Filters-in-Python

./: 00-Preface.ipynb  01-g-h-filter.ipynb  02-Discrete-Bayes.ipynb  pyproject.toml
