[tool.poetry]
name = "kalman-and-bayesian-filters-in-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
filterpy = "^1.4.5"
seaborn = "^0.10.0"
numpy = "^1.18.1"
matplotlib = "^3.2.0"
pandas = "^1.0.1"
jupyterlab = "^2.0.0"
ipywidgets = "^7.5.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
